<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:app="http://schemas.android.com/apk/res-auto"
    <item
        android:id="@+id/iBuscar"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/titulo_buscar"
        android:titleCondensed="@string/titulo_buscar"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/switchVal"
        android:title="@string/titulo_switch"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/iNuevo"
        android:icon="@drawable/nuevo"
        android:title="@string/titulo_nuevo"
        app:showAsAction="always" />
</menu>